--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
+language: bash
+  
 env:
   global:
     - RHYME=rhyme.txt
+
+before_install:
+  - sudo add-apt-repository ppa:duggan/bats --yes
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq bats
 
 script:
   - bats tests/
