--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,13 @@ before_install:
   - sudo apt-get install -qq bats
 
 install:
+  # Prepare lists to analyse, containing just the last few characters of last word.
   - cat ${RHYME} | awk '{ print $NF }' | sed 's/,//;s/\.//g;s/$^//' | grep -o .$ | xargs -L 2 > analysis1.txt
   - cat ${RHYME} | awk '{ print $NF }' | sed 's/,//;s/\.//g;s/$^//' | grep -o ..$ | xargs -L 2 > analysis2.txt
   - cat ${RHYME} | awk '{ print $NF }' | sed 's/,//;s/\.//g;s/$^//' | grep -o ...$ | xargs -L 2 > analysis3.txt
   - cat ${RHYME} | awk '{ print $NF }' | sed 's/,//;s/\.//g;s/$^//' | grep -o ....$ | xargs -L 2 > analysis4.txt
+  # Change similar sounding letters, so they are comparable.
+  - cat phonetic-lut.txt | while read original replacement rest ; do sed "s/${original}/${replacement}/analysis*.txt ; done
   
 script:
   - bats tests/
