--- a/.travis.yml
+++ b/.travis.yml
@@ -17,15 +17,17 @@ install:
   # Change similar sounding letters, so they are comparable.
   - cat phonetic-lut.txt | while read original replacement rest ; do sed -i "s/${original}/${replacement}/" ${RHYME} ; done
   - cat phonetic-lut.txt | while read original replacement rest ; do sed -i "s/${original}/${replacement}/" ${RHYMENOT} ; done
+  # Removing (optional) punctuation characters (.,?!).
+  - sed -i 's/,//;s/\.//g;s/!//;s/?//;s/$^//' ${RHYME}
   # Prepare lists to analyse, containing just the last few characters of last word.
-  - cat ${RHYME} | awk '{ print $NF }' | sed 's/,//;s/\.//g;s/$^//' | grep -o .$ | xargs -L 2 > analysis1.txt
-  - cat ${RHYME} | awk '{ print $NF }' | sed 's/,//;s/\.//g;s/$^//' | grep -o ..$ | xargs -L 2 > analysis2.txt
-  - cat ${RHYME} | awk '{ print $NF }' | sed 's/,//;s/\.//g;s/$^//' | grep -o ...$ | xargs -L 2 > analysis3.txt
-  - cat ${RHYME} | awk '{ print $NF }' | sed 's/,//;s/\.//g;s/$^//' | grep -o ....$ | xargs -L 2 > analysis4.txt
-  - cat ${RHYMENOT} | awk '{ print $NF }' | sed 's/,//;s/\.//g;s/$^//' | grep -o .$ | xargs -L 2 > analysisnot1.txt
-  - cat ${RHYMENOT} | awk '{ print $NF }' | sed 's/,//;s/\.//g;s/$^//' | grep -o ..$ | xargs -L 2 > analysisnot2.txt
-  - cat ${RHYMENOT} | awk '{ print $NF }' | sed 's/,//;s/\.//g;s/$^//' | grep -o ...$ | xargs -L 2 > analysisnot3.txt
-  - cat ${RHYMENOT} | awk '{ print $NF }' | sed 's/,//;s/\.//g;s/$^//' | grep -o ....$ | xargs -L 2 > analysisnot4.txt
+  - cat ${RHYME} |  grep -o .$ | xargs -L 2 > analysis1.txt
+  - cat ${RHYME} | grep -o ..$ | xargs -L 2 > analysis2.txt
+  - cat ${RHYME} | grep -o ...$ | xargs -L 2 > analysis3.txt
+  - cat ${RHYME} | grep -o ....$ | xargs -L 2 > analysis4.txt
+  - cat ${RHYMENOT} | grep -o .$ | xargs -L 2 > analysisnot1.txt
+  - cat ${RHYMENOT} | grep -o ..$ | xargs -L 2 > analysisnot2.txt
+  - cat ${RHYMENOT} | grep -o ...$ | xargs -L 2 > analysisnot3.txt
+  - cat ${RHYMENOT} | grep -o ....$ | xargs -L 2 > analysisnot4.txt
 
 script:
   - echo "Testing the rhyme quality of ${RHYME}, which contains:"
